# lennys-wisdom-mcp

./: .gitignore  ENHANCEMENTS_V2.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
extraction_scripts/: extract_episode_metadata.py  requirements.txt
extraction_scripts/output/: ep-ami-vora.json  ep-bangaly-kaba.json  ep-bret-taylor.json  ep-dan-shipper.json  ep-dharmesh-shah.json  ep-gibson-biddle.json  ep-matt-mochary.json
lennys_wisdom/: __init__.py  __main__.py  server.py
lennys_wisdom/data/episodes/: ep-annie-duke.json  ep-april-dunford.json  ep-ben-horowitz.json  ep-bob-moesta.json  ep-brian-chesky.json  ep-camille-fournier.json  ep-casey-winters.json  ep-claire-hughes-johnson.json  ep-deb-liu.json  ep-drew-houston.json  ep-kim-scott.json  ep-shishir-mehrotra.json  ep-shreyas-doshi.json
mcp_server/: README.md  claude_desktop_config.example.json  lennys_wisdom_server.py
